<resources>
    <string name="app_name">仁孚在线</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="common_province">省份</string>

    <!-- 欢迎页面 start-->
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_content">德国汉威</string>
    <string name="welcome_btn_login">登录</string>
    <!-- 欢迎页面 end-->

    <!-- 资讯 start -->
    <string name="news_modulename">新闻阅读</string>
    <string name="news_menu_settings">新闻定制</string>
    <string name="news_menu_add">新闻新增</string>
    <!-- 资讯 end -->

    <!-- 注册 start -->
    <string name="title_activity_register">注册</string>
    <string name="register_tv_storename">门店名称</string>
    <string name="register_tv_username">姓名</string>
    <string name="register_tv_account">账号</string>
    <string name="register_tv_password">密码</string>
    <string name="register_tv_phone">手机号</string>
    <string name="register_tv_identify">验证码登入</string>
    <!-- 注册 end -->

    <!-- 登陆 start -->
    <string name="title_activity_login">登陆</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="login_tv_register"><u>注册账号</u></string>
    <!-- 登陆 end -->

    <!--订货 start　-->
    <string name="title_activity_ordergoods">我要订货</string>
    <string name="ordergoods_tv_store">网点</string>
    <string name="ordergoods_tv_ordertime">时间</string>
    <string name="ordergoods_tv_carframeno">车架号</string>
    <string name="ordergoods_tv_timmodel">隔热膜型号</string>
    <string name="ordergoods_tv_carownername">车主姓名</string>
    <string name="ordergoods_tv_phone">手机号</string>
    <string name="ordergoods_tv_deliveraddress">送货地址</string>
    <string name="ordergoods_tv_expcartime">预计提车时间</string>
    <string name="ordergoods_tv_shijishigongtime">实际施工时间</string>
    <!--订货 end　-->

    <!-- 我要查单　start -->
    <string name="title_activity_searchgoods">我要查单</string>
    <string name="title_activity_searchlist">查单结果</string>
    <string name="searchgoods_tv_ordertime">时间</string>
    <string name="searchgoods_tv_carframeno">车架号</string>
    <string name="searchgoods_tv_timmodel">隔热膜型号</string>
    <string name="searchgoods_tv_actureconstrustion">实际施工时间</string>
    <!-- 我要查单　end -->

    <!-- 我要查单　start -->
    <string name="title_activity_dial">天使如愿盘</string>

    <!-- 我要查单　end -->

    <!-- 选择门店　start -->
    <string name="title_activity_store">选择门店</string>
    <string name="title_activity_provice">选择省份</string>

    <!-- 选择门店　end -->

</resources>
