<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hmwg.main.searchorder.SearchOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Search progress -->
        <ProgressBar
            android:id="@+id/searchgoods_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/searchgoods_sv_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/searchgoods_ll_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/searchgoods_tv_carframeno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/searchgoods_tv_carframeno"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/searchgoods_tv_ordertime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/searchgoods_tv_ordertime"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:completionThreshold="1"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/searchgoods_tv_timmodel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/searchgoods_tv_timmodel"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/searchgoods_tv_actureconstrustion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/searchgoods_tv_actureconstrustion"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/icon_search" />
</android.support.design.widget.CoordinatorLayout>
